lang/spec/y.output

state 0
	$accept: .program $end 
	program: .    (2)

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  reduce 2 (src line 65)

	program  goto 1
	expr  goto 2
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 1
	$accept:  program.$end 

	$end  accept
	.  error


state 2
	program:  expr.    (1)
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	Pipe  shift 17
	LogOr  shift 19
	LogAnd  shift 18
	CmpEq  shift 24
	CmpNotEq  shift 25
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 1 (src line 64)


state 3
	expr:  literal.    (3)

	.  reduce 3 (src line 67)


state 4
	expr:  selector.    (4)

	.  reduce 4 (src line 68)


state 5
	expr:  operator.    (5)

	.  reduce 5 (src line 69)


state 6
	expr:  func_call.    (6)

	.  reduce 6 (src line 70)


state 7
	literal:  Bool.    (8)

	.  reduce 8 (src line 74)


state 8
	literal:  String.    (9)

	.  reduce 9 (src line 75)


state 9
	literal:  Int.    (10)

	.  reduce 10 (src line 76)


state 10
	literal:  Float.    (11)

	.  reduce 11 (src line 77)


state 11
	literal:  Null.    (12)

	.  reduce 12 (src line 78)


state 12
	selector:  Dot.    (13)
	selector:  Dot.Identifier sub_selector 
	selector:  Dot.LeftBracket RightBracket sub_selector 
	selector:  Dot.LeftBracket expr RightBracket sub_selector 
	selector:  Dot.LeftBracket expr Colon expr RightBracket sub_selector 
	selector:  Dot.LeftBracket Colon expr RightBracket sub_selector 
	selector:  Dot.LeftBracket expr Colon RightBracket sub_selector 

	LeftBracket  shift 31
	Identifier  shift 30
	.  reduce 13 (src line 81)


state 13
	operator:  LogNot.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 32
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 14
	operator:  NumSub.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 33
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 15
	operator:  LeftParens.operator RightParens 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 35
	literal  goto 3
	selector  goto 4
	operator  goto 34
	func_call  goto 6

state 16
	func_call:  Identifier.LeftParens args RightParens 

	LeftParens  shift 36
	.  error


state 17
	expr:  expr Pipe.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 37
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 18
	operator:  expr LogAnd.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 38
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 19
	operator:  expr LogOr.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 39
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 20
	operator:  expr NumAdd.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 40
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 21
	operator:  expr NumSub.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 41
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 22
	operator:  expr NumDiv.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 42
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 23
	operator:  expr NumMul.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 43
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 24
	operator:  expr CmpEq.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 44
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 25
	operator:  expr CmpNotEq.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 45
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 26
	operator:  expr CmpGt.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 46
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 27
	operator:  expr CmpGtOrEq.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 47
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 28
	operator:  expr CmpLs.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 48
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 29
	operator:  expr CmpLsOrEq.expr 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 49
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 30
	selector:  Dot Identifier.sub_selector 
	sub_selector: .    (26)

	Dot  shift 51
	LeftBracket  shift 52
	.  reduce 26 (src line 95)

	sub_selector  goto 50

state 31
	selector:  Dot LeftBracket.RightBracket sub_selector 
	selector:  Dot LeftBracket.expr RightBracket sub_selector 
	selector:  Dot LeftBracket.expr Colon expr RightBracket sub_selector 
	selector:  Dot LeftBracket.Colon expr RightBracket sub_selector 
	selector:  Dot LeftBracket.expr Colon RightBracket sub_selector 

	Dot  shift 12
	RightBracket  shift 53
	LeftParens  shift 15
	Colon  shift 55
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 54
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 32
	expr:  expr.Pipe expr 
	operator:  LogNot expr.    (27)
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	CmpEq  shift 24
	CmpNotEq  shift 25
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 27 (src line 97)


state 33
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  NumSub expr.    (30)
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 30 (src line 100)


state 34
	expr:  operator.    (5)
	operator:  LeftParens operator.RightParens 

	RightParens  shift 56
	.  reduce 5 (src line 69)


state 35
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	Pipe  shift 17
	LogOr  shift 19
	LogAnd  shift 18
	CmpEq  shift 24
	CmpNotEq  shift 25
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  error


state 36
	func_call:  Identifier LeftParens.args RightParens 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 58
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6
	args  goto 57

state 37
	expr:  expr.Pipe expr 
	expr:  expr Pipe expr.    (7)
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	Pipe  shift 17
	LogOr  shift 19
	LogAnd  shift 18
	CmpEq  shift 24
	CmpNotEq  shift 25
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 7 (src line 71)


state 38
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr LogAnd expr.    (28)
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	CmpEq  shift 24
	CmpNotEq  shift 25
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 28 (src line 98)


state 39
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr LogOr expr.    (29)
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	LogAnd  shift 18
	CmpEq  shift 24
	CmpNotEq  shift 25
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 29 (src line 99)


state 40
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr NumAdd expr.    (31)
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 31 (src line 101)


state 41
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr NumSub expr.    (32)
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 32 (src line 102)


state 42
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr NumDiv expr.    (33)
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	.  reduce 33 (src line 103)


state 43
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr NumMul expr.    (34)
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	NumDiv  shift 22
	.  reduce 34 (src line 104)


state 44
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr CmpEq expr.    (35)
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	CmpEq  error
	CmpNotEq  error
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 35 (src line 105)


state 45
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr CmpNotEq expr.    (36)
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	CmpEq  error
	CmpNotEq  error
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 36 (src line 106)


state 46
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr CmpGt expr.    (37)
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	CmpGt  error
	CmpGtOrEq  error
	CmpLs  error
	CmpLsOrEq  error
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 37 (src line 107)


state 47
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr CmpGtOrEq expr.    (38)
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	CmpGt  error
	CmpGtOrEq  error
	CmpLs  error
	CmpLsOrEq  error
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 38 (src line 108)


state 48
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr CmpLs expr.    (39)
	operator:  expr.CmpLsOrEq expr 

	CmpGt  error
	CmpGtOrEq  error
	CmpLs  error
	CmpLsOrEq  error
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 39 (src line 109)


state 49
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 
	operator:  expr CmpLsOrEq expr.    (40)

	CmpGt  error
	CmpGtOrEq  error
	CmpLs  error
	CmpLsOrEq  error
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 40 (src line 110)


state 50
	selector:  Dot Identifier sub_selector.    (14)

	.  reduce 14 (src line 82)


state 51
	sub_selector:  Dot.Identifier sub_selector 

	Identifier  shift 59
	.  error


state 52
	sub_selector:  LeftBracket.RightBracket sub_selector 
	sub_selector:  LeftBracket.expr RightBracket sub_selector 
	sub_selector:  LeftBracket.expr Colon expr RightBracket sub_selector 
	sub_selector:  LeftBracket.Colon expr RightBracket sub_selector 
	sub_selector:  LeftBracket.expr Colon RightBracket sub_selector 

	Dot  shift 12
	RightBracket  shift 60
	LeftParens  shift 15
	Colon  shift 62
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 61
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 53
	selector:  Dot LeftBracket RightBracket.sub_selector 
	sub_selector: .    (26)

	Dot  shift 51
	LeftBracket  shift 52
	.  reduce 26 (src line 95)

	sub_selector  goto 63

state 54
	expr:  expr.Pipe expr 
	selector:  Dot LeftBracket expr.RightBracket sub_selector 
	selector:  Dot LeftBracket expr.Colon expr RightBracket sub_selector 
	selector:  Dot LeftBracket expr.Colon RightBracket sub_selector 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 

	RightBracket  shift 64
	Colon  shift 65
	Pipe  shift 17
	LogOr  shift 19
	LogAnd  shift 18
	CmpEq  shift 24
	CmpNotEq  shift 25
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  error


state 55
	selector:  Dot LeftBracket Colon.expr RightBracket sub_selector 

	Dot  shift 12
	LeftParens  shift 15
	Null  shift 11
	Bool  shift 7
	Identifier  shift 16
	String  shift 8
	Int  shift 9
	Float  shift 10
	LogNot  shift 13
	NumSub  shift 14
	.  error

	expr  goto 66
	literal  goto 3
	selector  goto 4
	operator  goto 5
	func_call  goto 6

state 56
	operator:  LeftParens operator RightParens.    (41)

	.  reduce 41 (src line 111)


state 57
	func_call:  Identifier LeftParens args.RightParens 

	RightParens  shift 67
	.  error


state 58
	expr:  expr.Pipe expr 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 
	args:  expr.    (43)
	args:  expr.Comma args 

	Pipe  shift 17
	Comma  shift 68
	LogOr  shift 19
	LogAnd  shift 18
	CmpEq  shift 24
	CmpNotEq  shift 25
	CmpGt  shift 26
	CmpGtOrEq  shift 27
	CmpLs  shift 28
	CmpLsOrEq  shift 29
	NumAdd  shift 20
	NumSub  shift 21
	NumMul  shift 23
	NumDiv  shift 22
	.  reduce 43 (src line 116)


state 59
	sub_selector:  Dot Identifier.sub_selector 
	sub_selector: .    (26)

	Dot  shift 51
	LeftBracket  shift 52
	.  reduce 26 (src line 95)

	sub_selector  goto 69

state 60
	sub_selector:  LeftBracket RightBracket.sub_selector 
	sub_selector: .    (26)

	Dot  shift 51
	LeftBracket  shift 52
	.  reduce 26 (src line 95)

	sub_selector  goto 70

state 61
	expr:  expr.Pipe expr 
	sub_selector:  LeftBracket expr.RightBracket sub_selector 
	sub_selector:  LeftBracket expr.Colon expr RightBracket sub_selector 
	sub_selector:  LeftBracket expr.Colon RightBracket sub_selector 
	operator:  expr.LogAnd expr 
	operator:  expr.LogOr expr 
	operator:  expr.NumAdd expr 
	operator:  expr.NumSub expr 
	operator:  expr.NumDiv expr 
	operator:  expr.NumMul expr 
	operator:  expr.CmpEq expr 
	operator:  expr.CmpNotEq expr 
	operator:  expr.CmpGt expr 
	operator:  expr.CmpGtOrEq expr 
	operator:  expr.CmpLs expr 
	operator:  expr.CmpLsOrEq expr 
